--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 body{
-    background-color: aliceblue;
+    background-color: #673ab7
 }
-div{
-    background-color: violet;
+div.container{
+    background-color: #d3bbff;
+}
+.p50{
+    padding: 50px;
 }
